# agents

./: pyproject.toml
1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  app.py  async_work.py  contact_log.json
1_foundations/me/: async_learn.py  summary.txt
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  4_lab4.ipynb  app.py
2_openai/deep_search_mine/: CITATION_FORMAT.md  DEPLOYMENT.md  README.md  UI_DESIGN.md  deep_research.py  email_agent.py  planner_agent.py  requirements.txt  research_manager.py  search_agent.py  test_email.py  write_agent.py
3_crew/truedebate/: README.md  pyproject.toml
3_crew/truedebate/src/truedebate/: crew.py  main.py
4_langgraph/: 1_lab1.ipynb  2_lab2.ipynb  memory.db-shm  memory.db-wal
