[project]
name = "truedebate"
version = "0.1.0"
description = "truedebate using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.2.0"
]

[project.scripts]
truedebate = "truedebate.main:run"
run_crew = "truedebate.main:run"
train = "truedebate.main:train"
replay = "truedebate.main:replay"
test = "truedebate.main:test"
run_with_trigger = "truedebate.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
